# kiwi

./: .env  FASTRTPS_PROFILE.xml  README.md  compose.yaml  pi_deploy.sh
kiwi_behaviour/: CMakeLists.txt  package.xml
kiwi_behaviour/launch/: bt_navigator_test.launch.py
kiwi_behaviour/src/: drive_platform.cpp
kiwi_bringup/: CMakeLists.txt  package.xml
kiwi_bringup/config/: ekf.yaml  kalibr_results_imucam.txt  nav2_params.yaml
kiwi_bringup/kiwi_bringup/: remote_launch_terminator.py  twist_stamper.py
kiwi_bringup/launch/: jetson.launch.py  navigation.launch.py  pi.launch.py  rviz.launch.py  slam.launch.py
kiwi_bringup/rviz/: moveit.rviz
kiwi_description/: CMakeLists.txt  package.xml
kiwi_description/launch/: view_kiwi.launch.py
kiwi_description/meshes/: base.dae  finger.dae  link0.dae  link1.dae  link2.dae  link3.dae  mecanum_simple.dae
kiwi_description/urdf/: kiwi.arm.ros2_control.xacro  kiwi.arm.xacro  kiwi.platform.ros2_control.xacro  kiwi.platform.xacro  kiwi.urdf.xacro
kiwi_dockerfiles/jetson_humble/: Dockerfile  jetson_entrypoint.sh
kiwi_dockerfiles/pi_humble/: Dockerfile  pi_entrypoint.sh
kiwi_dockerfiles/teleop_humble/: Dockerfile
kiwi_hardware/: CMakeLists.txt  kiwi_hardware.xml  package.xml
kiwi_hardware/include/kiwi_hardware/: kiwi_hardware_interface.hpp
kiwi_hardware/src/: kiwi_hardware_interface.cpp
kiwi_interfaces/: CMakeLists.txt  package.xml
kiwi_interfaces/action/: DrivePlatform.action  QueryAprilTagLog.action
kiwi_interfaces/msg/: AprilTagDetectionStamped.msg
kiwi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kiwi_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kiwi.ros2_control.xacro  kiwi.srdf  kiwi.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
kiwi_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
kiwi_perception/: CMakeLists.txt  package.xml
kiwi_perception/launch/: arm_perception.launch.py  perception.launch.py
kiwi_perception/src/: apriltag_manager.cpp  grasp_planner.cpp  grasp_proposal.cpp
kiwi_teleop/: package.xml  setup.cfg  setup.py
kiwi_teleop/config/: config.rviz
kiwi_teleop/launch/: teleop.launch.py
udev/: 101-rplidar.rules  set_rules.bash
xavbot_behaviour/: CMakeLists.txt
xavbot_behaviour/launch/: bt_navigator_test.launch.py
xavbot_behaviour/params/: bt_params.yaml
xavbot_behaviour/src/: mobile_manipulate_node.cpp  pick_cube.cpp
xavbot_bringup/: CMakeLists.txt  package.xml
xavbot_bringup/config/: ekf.yaml  kalibr_imu.yaml  lidar.yaml  xavbot_controller_config.yaml
xavbot_bringup/config/openvins/: estimator_config.yaml  kalibr_chain.yaml
xavbot_bringup/launch/: jetson.launch.py  odom.launch.py  pi.launch.py  slam.launch.py  vio.launch.py  xavbot.launch.py
xavbot_bringup/xavbot_bringup/: odom_covariance_override.py
xavbot_controller/include/xavbot_controller/: mecanum_drive_controller.hpp
xavbot_controller/src/: mecanum_drive_controller.cpp
xavbot_description/: CMakeLists.txt  package.xml
xavbot_description/launch/: view_xavbot.launch.py
xavbot_description/meshes/: base.dae  finger.dae  link0.dae  link1.dae  link2.dae  link3.dae  xavbot_chassis_2.1.0.dae
xavbot_description/rviz/: view_xavbot.rviz
xavbot_description/urdf/: xavbot.arm.ros2_control.xacro  xavbot.arm.urdf.xacro  xavbot.arm.xacro  xavbot.platform.ros2_control.xacro  xavbot.platform.xacro  xavbot.urdf.xacro
xavbot_dockerfiles/: docker-compose.yaml
xavbot_dockerfiles/arm64_humble/: Dockerfile  docker-compose.yaml  pi_entrypoint.sh
xavbot_dockerfiles/isaac_ros/: .isaac_ros_dev-dockerargs  Dockerfile.xavbot  setup_isaac_ros.bash
xavbot_dockerfiles/jetson_humble/: Dockerfile  docker-compose.yaml  jetson_entrypoint.sh
xavbot_dockerfiles/pi_humble/: docker-compose.yaml  pi_entrypoint.sh
xavbot_dockerfiles/scripts/: pi_entrypoint.sh
xavbot_hardware/: CMakeLists.txt
xavbot_hardware/include/xavbot_hardware/: xavbot_hardware_interface.hpp
xavbot_hardware/src/: xavbot_hardware_interface.cpp
xavbot_interfaces/: CMakeLists.txt  package.xml
xavbot_moveit_config/: .setup_assistant  CMakeLists.txt
xavbot_moveit_config/config/: initial_positions.yaml  kinematics.yaml  xavbot.ros2_control.xacro  xavbot.srdf  xavbot.urdf.xacro
xavbot_perception/: CMakeLists.txt  package.xml
xavbot_perception/launch/: arm_perception.launch.py
xavbot_perception/src/: apriltag_manager.cpp
